--- a/bitcamp-project/build.gradle
+++ b/bitcamp-project/build.gradle
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     implementation 'com.google.guava:guava:28.0-jre'
     testImplementation 'junit:junit:4.12'
