--- a/bitcamp-project-server/build.gradle
+++ b/bitcamp-project-server/build.gradle
@@ -19,17 +19,24 @@ repositories {
 }
 
 dependencies {
+  // MariaDB JDBC 드라이버
+  implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.4'
+
+  // Mybatis 퍼시스턴스 프레임워크
+  implementation 'org.mybatis:mybatis:3.5.4'
+
   // Spring IoC 컨테이너
   implementation 'org.springframework:spring-context:5.2.4.RELEASE'
 
-  // MariaDB JDBC 드라이버
-  implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.4'
+  // Spring JDBC 관련 라이브러리
+  implementation 'org.springframework:spring-jdbc:5.2.4.RELEASE'
+  
+  // Mybatis를 Spring IoC와 연결하는 어댑터 라이브러리
+  implementation 'org.mybatis:mybatis-spring:2.0.4'
 
   // JSON 형식의 문자열을 다루는 라이브러리
   implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
   
-  // Mybatis 퍼시스턴스 프레임워크
-  implementation 'org.mybatis:mybatis:3.5.4'
   
   implementation 'com.google.guava:guava:28.1-jre'
   testImplementation 'junit:junit:4.12'
