--- a/bitcamp-project-server/src/main/resources/log4j.properties
+++ b/bitcamp-project-server/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 #log4j.properties
 # Set root logger level to DEBUG and its only appender to stdout.
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
 
 # stdout is set to be a ConsoleAppender.
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
