--- a/bitcamp-project-server/build.gradle
+++ b/bitcamp-project-server/build.gradle
@@ -46,6 +46,17 @@ dependencies {
   // Apache HttpComponents 라이브러리
   implementation 'org.apache.httpcomponents.client5:httpclient5:5.0'
   
+  // Servlet-API
+  // => 컴파일 할 때만 사용한다.
+  // => 배치할 때는 포함하지 않는다.
+  // => 왜? 서버에 이미 이 라이브러리가 있기 때문이다.
+  // 
+  // 의존라이브러리 옵션
+  // => implementation : 컴파일한 후 생성되는 빌드 파일에 포함된다.
+  // => compileOnly : 컴파일한 후 생성되는 빌드 파일에 포함되지 않는다.
+  //
+  compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+  
   implementation 'com.google.guava:guava:28.1-jre'
   testImplementation 'junit:junit:4.12'
 }
