--- a/bitcamp-project-server/build.gradle
+++ b/bitcamp-project-server/build.gradle
@@ -40,11 +40,17 @@ dependencies {
   // Mybatis 퍼시스턴스 프레임워크
   implementation 'org.mybatis:mybatis:3.5.4'
 
+  // Spring WebMVC 라이브러리 
+  implementation 'org.springframework:spring-webmvc:5.2.5.RELEASE'
+
   // Spring IoC 컨테이너
-  implementation 'org.springframework:spring-context:5.2.4.RELEASE'
+  // => Spring WebMVC 라이브러리 spring-context 라이브러리를 사용하기 때문에  
+  //    자동으로 추가된다.
+  // => 따라서 그래이들 스크립트 파일에 명시할 필요가 없다.
+  // implementation 'org.springframework:spring-context:5.2.5.RELEASE'
 
   // Spring JDBC 관련 라이브러리
-  implementation 'org.springframework:spring-jdbc:5.2.4.RELEASE'
+  implementation 'org.springframework:spring-jdbc:5.2.5.RELEASE'
   
   // Mybatis를 Spring IoC와 연결하는 어댑터 라이브러리
   implementation 'org.mybatis:mybatis-spring:2.0.4'
